--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,9 @@ services:
       retries: 30
     restart: unless-stopped
 
-  minio-client:
+  minio-init:
     image: minio/mc:RELEASE.2025-08-13T08-35-41Z
-    container_name: pdftext-minio-client
+    container_name: pdftext-minio-init
     depends_on:
       minio:
         condition: service_healthy
@@ -74,7 +74,112 @@ services:
       echo "MinIO bucket ready: $$S3_BUCKET"
     restart: "no"
 
+  api:
+    build:
+      context: ./apps/api
+      dockerfile: Dockerfile
+      target: dev
+    container_name: pdftext-api
+    environment:
+      NODE_ENV: ${NODE_ENV:-development}
+      PORT: ${API_PORT_INTERNAL:-3000}
+
+      DATABASE_URL: ${DATABASE_URL:-postgresql://pdftext:pdftext@postgres:5432/pdftext?schema=public}
+
+      RABBITMQ_URL: ${RABBITMQ_URL:-amqp://guest:guest@rabbitmq:5672}
+      RABBITMQ_EXCHANGE: ${RABBITMQ_EXCHANGE:-pdftext}
+      RABBITMQ_QUEUE: ${RABBITMQ_QUEUE:-pdftext.extract}
+      RABBITMQ_ROUTING_KEY: ${RABBITMQ_ROUTING_KEY:-extract_text}
+
+      S3_ENDPOINT: ${S3_ENDPOINT:-http://minio:9000}
+      S3_REGION: ${S3_REGION:-us-east-1}
+      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:-minio}
+      S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:-minio123456}
+      S3_BUCKET: ${S3_BUCKET:-pdfs}
+      S3_FORCE_PATH_STYLE: ${S3_FORCE_PATH_STYLE:-true}
+
+      JWT_SECRET: ${JWT_SECRET:-dev_jwt_secret_change_me}
+      LOG_LEVEL: ${LOG_LEVEL:-info}
+    ports:
+      - "${API_PORT:-3000}:${API_PORT_INTERNAL:-3000}"
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      minio-init:
+        condition: service_completed_successfully
+    volumes:
+      - ./apps/api:/app
+      - api_node_modules:/app/node_modules
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:$${PORT}/healthz || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 30
+    restart: unless-stopped
+
+  worker:
+    build:
+      context: ./apps/worker
+      dockerfile: Dockerfile
+      target: dev
+    container_name: pdftext-worker
+    environment:
+      NODE_ENV: ${NODE_ENV:-development}
+
+      DATABASE_URL: ${DATABASE_URL:-postgresql://pdftext:pdftext@postgres:5432/pdftext?schema=public}
+
+      RABBITMQ_URL: ${RABBITMQ_URL:-amqp://guest:guest@rabbitmq:5672}
+      RABBITMQ_EXCHANGE: ${RABBITMQ_EXCHANGE:-pdftext}
+      RABBITMQ_QUEUE: ${RABBITMQ_QUEUE:-pdftext.extract}
+      RABBITMQ_ROUTING_KEY: ${RABBITMQ_ROUTING_KEY:-extract_text}
+
+      S3_ENDPOINT: ${S3_ENDPOINT:-http://minio:9000}
+      S3_REGION: ${S3_REGION:-us-east-1}
+      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID:-minio}
+      S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY:-minio123456}
+      S3_BUCKET: ${S3_BUCKET:-pdfs}
+      S3_FORCE_PATH_STYLE: ${S3_FORCE_PATH_STYLE:-true}
+
+      LOG_LEVEL: ${LOG_LEVEL:-info}
+      WORKER_CONCURRENCY: ${WORKER_CONCURRENCY:-2}
+      JOB_MAX_RETRIES: ${JOB_MAX_RETRIES:-3}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+      minio-init:
+        condition: service_completed_successfully
+    volumes:
+      - ./apps/worker:/app
+      - worker_node_modules:/app/node_modules
+    restart: unless-stopped
+
+  web:
+    build:
+      context: ./apps/web
+      dockerfile: Dockerfile
+      target: dev
+    container_name: pdftext-web
+    environment:
+      # Vite convention: only VITE_* is exposed to frontend
+      VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:${API_PORT:-3000}}
+    ports:
+      - "${WEB_PORT:-5173}:5173"
+    depends_on:
+      api:
+        condition: service_healthy
+    volumes:
+      - ./apps/web:/app
+      - web_node_modules:/app/node_modules
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   rabbitmq_data:
   minio_data:
+  api_node_modules:
+  worker_node_modules:
+  web_node_modules:
