--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -6,6 +6,10 @@ FROM base AS deps
 COPY package*.json ./
 RUN npm ci
 
+FROM base AS prod-deps
+COPY package*.json ./
+RUN npm ci --omit-dev
+
 FROM base AS dev
 ENV NODE_ENV=development
 COPY --from=deps /app/node_modules ./node_modules
@@ -14,7 +18,7 @@ EXPOSE 5173
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0", "--port", "5173"]
 
 FROM base AS build
-COPY --from=deps /app/node_modules ./node_modules
+COPY --from=prod-deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
 
