--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,60 @@
-# Ports
+# =========================
+# App environment (sample)
+# =========================
+
+# ---- Runtime mode ----
+NODE_ENV=development
+LOG_LEVEL=info
+
+# ---- Exposed ports (host) ----
 API_PORT=3000
 WEB_PORT=5173
 
-# Postgres
+# Internal container port the API listens on
+API_PORT_INTERNAL=3000
+
+# ---- PostgreSQL (container) ----
 POSTGRES_DB=pdftext
 POSTGRES_USER=pdftext
 POSTGRES_PASSWORD=pdftext
+POSTGRES_PORT=5432
 
-# RabbitMQ
+# Used by API + Worker (inside docker network)
+DATABASE_URL=postgresql://pdftext:pdftext@postgres:5432/pdftext?schema=public
+
+# ---- RabbitMQ (container) ----
 RABBITMQ_USER=guest
 RABBITMQ_PASS=guest
+RABBITMQ_PORT=5672
+RABBITMQ_MGMT_PORT=15672
 
-# MinIO / S3
+# Used by API + Worker (inside docker network)
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672
+RABBITMQ_EXCHANGE=pdftext
+RABBITMQ_QUEUE=pdftext.extract
+RABBITMQ_ROUTING_KEY=extract_text
+
+# ---- MinIO / S3 (container) ----
 MINIO_ROOT_USER=minio
 MINIO_ROOT_PASSWORD=minio123456
+MINIO_PORT=9000
+MINIO_CONSOLE_PORT=9001
+
+# Used by API + Worker (inside docker network)
+S3_ENDPOINT=http://minio:9000
+S3_REGION=us-east-1
+S3_ACCESS_KEY_ID=minio
+S3_SECRET_ACCESS_KEY=minio123456
 S3_BUCKET=pdfs
 S3_FORCE_PATH_STYLE=true
 
-# Auth
+# ---- Auth ----
 JWT_SECRET=dev_jwt_secret_change_me
 
-# Logging
-LOG_LEVEL=info
+# ---- Worker tuning ----
+WORKER_CONCURRENCY=2
+JOB_MAX_RETRIES=3
+
+# ---- Frontend (Vite) ----
+# This is the API URL as seen from your browser on the host machine.
+VITE_API_BASE_URL=http://localhost:3000
